--- a/public/template/partials/languageheader.html
+++ b/public/template/partials/languageheader.html
@@ -1,7 +1,8 @@
 <header id="header" class="media" translate-namespace="HEADER">
             <div class="pull-left h-logo">
-                <a ui-sref="/" class="" translate>
-                    .LOGO
+                <a ui-sref="/" class="" >
+                   OVERTABLE
+                   <small>Panel Administrativo</small>
                 </a>
             </div>
 
