--- a/public/template/partials/sidebar.html
+++ b/public/template/partials/sidebar.html
@@ -227,6 +227,10 @@
                     <li  ui-sref-active="active" ng-show="logedInUser.role =='restaurant'">
                          <a ui-sref="rooms"><i class="zmdi zmdi-airline-seat-recline-extra zmdi-hc-fw"></i> Rooms Manager </a>
                     </li>
+                    
+                     <li  ui-sref-active="active" ng-show="logedInUser.role =='restaurant'">
+                         <a ui-sref="reports"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i> Reports </a>
+                    </li>
 
                    
                 </ul>
