--- a/public/assets/css/app.min.1.css
+++ b/public/assets/css/app.min.1.css
@@ -10153,12 +10153,13 @@ pre {
   font-weight: 700;
   font-size: 23px;
   display: inline-block;
+  font-weight:  100;
 }
 
 .h-logo a small {
   display: block;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 100%;
   margin-top: -3px;
   color: rgba(255, 255, 255, 0.6);
@@ -10625,6 +10626,7 @@ pre {
   padding: 0;
   margin: 30px 0 60px;
   padding-left: 40px;
+  visibility:  hidden;
 }
 
 .smm-alerts > li {
