--- a/public/template/index.html
+++ b/public/template/index.html
@@ -100,6 +100,9 @@
  <script src="/public/app/modules/profile/profile.init.js"></script>
  <script src="/public/app/modules/profile/profileController.js"></script>
  <script src="/public/app/modules/profile/profileService.js"></script>
+ <script src="/public/app/modules/reports/reports.init.js"></script>
+ <script src="/public/app/modules/reports/reportsController.js"></script>
+ <script src="/public/app/modules/reports/reportsService.js"></script>
  <script src="/public/app/modules/user/user.init.js"></script>
  <script src="/public/app/modules/user/userController.js"></script>
  <script src="/public/app/modules/user/userService.js"></script>
