--- a/public/template/partials/footer.html
+++ b/public/template/partials/footer.html
@@ -1,5 +1,5 @@
 
-<ng-bind-html  ng-bind-html="'FOOTERTEXT' | translate">
+<ng-bind-html>Copyright &copy; 2018 Disruptive Partners
 </ng-bind-html>
              <!--  <ul class="f-menu">
                     <li><a ui-sref="admindashboard">Dashboard</a></li>
