--- a/public/template/partials/sidebar.html
+++ b/public/template/partials/sidebar.html
@@ -221,15 +221,15 @@
                     </li>
                     <li  ui-sref-active="active" ng-show="logedInUser.role =='restaurant'">
                        
-                         <a ui-sref="shifts"><i class="zmdi zmdi-receipt zmdi-hc-fw"></i> Shifts Manager </a>
+                         <a ui-sref="shifts"><i class="zmdi zmdi-receipt zmdi-hc-fw"></i> <span translate>.SHIFTMANAGER</span> </a>
                     </li>
                     
                     <li  ui-sref-active="active" ng-show="logedInUser.role =='restaurant'">
-                         <a ui-sref="rooms"><i class="zmdi zmdi-airline-seat-recline-extra zmdi-hc-fw"></i> Rooms Manager </a>
+                         <a ui-sref="rooms"><i class="zmdi zmdi-airline-seat-recline-extra zmdi-hc-fw"></i> <span translate>.ROOMMANAGER</span> </a>
                     </li>
                     
                      <li  ui-sref-active="active" ng-show="logedInUser.role =='restaurant'">
-                         <a ui-sref="reports"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i> Reports </a>
+                         <a ui-sref="reports"><i class="zmdi zmdi-assignment zmdi-hc-fw"></i> <span translate>.REPORTS</span> </a>
                     </li>
 
                    
