--- a/public/template/index.html
+++ b/public/template/index.html
@@ -149,6 +149,9 @@
 <!-- <script src="vendors/summernote/dist/summernote-updated.min.js"></script> -->
 
 
+<script src="./public/assets/js/functions.js"></script>
+
+<script src="./public/assets/js/actions.js"></script>
 <!-- Placeholder for IE9 -->
 <!--[if IE 9 ]>
     <script src="vendors/bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
